<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/command_case_analyze" />

        <TextView
            android:id="@+id/btn_chang_fen"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/res_bg_normal_radius_ture_stroke_true_white_selector"
            android:gravity="center"
            android:text="@string/command_changfen" />

        <ImageView
            android:id="@+id/img_chang_fen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/btn_hun_dun"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/res_bg_normal_radius_ture_stroke_true_white_selector"
            android:gravity="center"
            android:text="@string/command_hundun" />

        <ImageView
            android:id="@+id/img_hun_dun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/btn_he_fen"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/res_bg_normal_radius_ture_stroke_true_white_selector"
            android:gravity="center"
            android:text="@string/command_hefen" />

        <ImageView
            android:id="@+id/img_he_fen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop" />

    </LinearLayout>

</ScrollView>