<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/mediator_case_analyze" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/res_bg_normal_radius_ture_stroke_true_white_selector"
            android:hint="请输入讲话内容"
            android:paddingLeft="10dp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seller"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/res_bg_normal_radius_ture_stroke_true_white_selector"
                android:gravity="center"
                android:text="@string/mediator_seller" />

            <TextView
                android:id="@+id/buyer"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/res_bg_normal_radius_ture_stroke_true_white_selector"
                android:gravity="center"
                android:text="@string/mediator_buyer" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/res_bg_normal_radius_ture_stroke_true_white_selector"
            android:gravity="center|left"
            android:minHeight="45dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    </LinearLayout>

</ScrollView>