<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/visitor_case_analyze" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="原材料有：铜和纸，请选择生产公司" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/art"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/res_bg_normal_radius_ture_stroke_true_white_selector"
                android:gravity="center"
                android:text="@string/visitor_art" />

            <TextView
                android:id="@+id/mint"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/res_bg_normal_radius_ture_stroke_true_white_selector"
                android:gravity="center"
                android:text="@string/visitor_mint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_result_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:scaleType="center"
                tools:src="@drawable/proxy_kind_no1" />

            <ImageView
                android:id="@+id/img_result_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:scaleType="center"
                tools:src="@drawable/proxy_kind_no1" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>